# rainmaker

./: .dockerignore  Cargo.toml  Dockerfile  config.json  docker-compose.yml  okex_config.json  okex_config_hzy.json  readme.md
exrs/src/binance/: websockets.rs
exrs/src/binance_f/: websockets.rs
exrs/src/okex_v5/: account.rs  api.rs  client.rs  config.rs  market.rs  rest_model.rs  websockets.rs
src/: config.rs  lib.rs  main.rs  util.rs
src/strategies/: avellaneda_stoikov.rs  avellaneda_stoikov_okex.rs  mod.rs
src/strategies/eie/: intensity_info.rs
src/strategies/eie/calibration/: regression_aksolver.rs  spread_intensity_curve.rs  traits.rs
