[package]
name = "rainmaker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [[bin]]
# name = "as"
# path = "src/bin/as.rs"

[[bin]]
name = "as_okex"
path = "src/bin/as_okex.rs"

# [[bin]]
# name = "arb"
# path = "src/bin/arb.rs"

[dependencies]
actix-rt = "2.5.0"
anyhow = "1.0.48"
awc = "2.0.3"
bytes = "1.1.0"
chrono = "0.4.19"
csv = "1.1.6"
env_logger = "0.9.0"
exrs = { path = "./exrs" }
linreg = "0.2.0"
log = "0.4.14"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.72"
# snmalloc-rs = { version = "0.3.0"}
tokio = "1.14.0"
uuid = { version = "0.8.2", features = ["v4"] }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[profile.dev]
debug = true
